Update vertex with vertex basics.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <main class="app-container"></main>
-    <script src="app.js" type="module"></script>
+    <script src="./assets/js/app.js" type="module"></script>
   </body>
 </html>
